test/fixtures/type-error/noOverloadQty.ro
private fun x(): i32 = 1
private fun x(a: i32): i32 = 1

fun x(a: f32): i32 = x(1.0, 1, 2)
